--- a/package.json
+++ b/package.json
@@ -3,8 +3,8 @@
   "version": "0.1.0",
   "private": true,
   "engines": {
-    "node": "14.x",
-    "npm": "6.x"
+    "node": "18.17.1",
+    "npm": "10.1.0"
   },
   "dependencies": {
     "@emotion/react": "^11.11.1",
