--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "axios": "^1.5.1",
     "leaflet": "^1.9.4",
     "leaflet-search": "^4.0.0",
     "mapbox-gl": "^2.15.0",
@@ -53,6 +54,7 @@
     ]
   },
   "devDependencies": {
+    "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
     "tailwindcss": "^3.3.3"
   }
 }
