--- a/package.json
+++ b/package.json
@@ -15,13 +15,17 @@
     "@material-tailwind/react": "^2.1.2",
     "@mui/icons-material": "^5.14.9",
     "@mui/material": "^5.14.10",
+    "@react-buddy/ide-toolbox": "^2.4.0",
+    "@react-buddy/palette-mui": "^5.0.1",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.5.1",
+    "dotenv": "^16.3.1",
     "leaflet": "^1.9.4",
     "leaflet-search": "^4.0.0",
     "mapbox-gl": "^2.15.0",
+    "node-fetch": "^2.7.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.0.2",
